--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <h1>Responsive Navbar</h1>
+        <h1>Main del proyecto</h1>
     </main>
     <footer>
         <div class="footer-content">
